tests/fixtures/invalid/str_div_bool.py
# Cannot divide Str and Bool
x: float = "hello" / True
